fix: removed overflow property from the #root id

--- a/client/wolflite/src/assets/stylesheets/index.css
+++ b/client/wolflite/src/assets/stylesheets/index.css
@@ -31,7 +31,6 @@ body,
   max-width: 100vw;
   background-color: var(--background);
   font-family: var(--mainFont);
-  overflow-x: hidden;
 }
 
 
